--- a/ehf_invoice/templates/ehf_invoice/supplier.html
+++ b/ehf_invoice/templates/ehf_invoice/supplier.html
@@ -4,24 +4,5 @@
 {% block content %}
     <h1>{{ supplier }}</h1>
     <h2>Fakturaer</h2>
-    <table>
-        <thead>
-        <tr>
-            <th>Kunde</th>
-            <th>Fakturanummer</th>
-            <th>Beløp</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for invoice in supplier.invoices.all %}
-            <tr>
-                <td>{{ invoice.customer.name }}</td>
-                <td>
-                    <a href="{% url 'ehf_invoice:invoice' %}?id={{ invoice.id }}">{{ invoice.invoice_number }}</a>
-                </td>
-                <td>{{ invoice.amount|intcomma }}kr</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    {% include 'ehf_invoice/invoices.html' with show_customer=True invoices=supplier.invoices.all %}
 {% endblock %}
