Hide order number if not set

--- a/ehf_invoice/templates/ehf_invoice/invoice.html
+++ b/ehf_invoice/templates/ehf_invoice/invoice.html
@@ -16,10 +16,12 @@
             <th>Fakturanummer</th>
             <td>{{ invoice.invoice_number }}</td>
         </tr>
-        <tr>
-            <th>Ordrenummer</th>
-            <td>{{ invoice.order_number|default:"" }}</td>
-        </tr>
+        {% if invoice.order_number %}
+            <tr>
+                <th>Ordrenummer</th>
+                <td>{{ invoice.order_number|default:"" }}</td>
+            </tr>
+        {% endif %}
         <tr>
             <th>Dato</th>
             <td>{{ invoice.date }}</td>
